// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`type system grammar > type alias > call type alias with type parameters 1`] = `
"{
  "$type": "FormMLDeclaration",
  "typeDeclarations": [
    {
      "$type": "TypeAliasDeclaration",
      "name": "MyType",
      "typeParameters": [
        {
          "$type": "TypeParameterDeclaration",
          "name": "T"
        },
        {
          "$type": "TypeParameterDeclaration",
          "name": "U"
        }
      ],
      "type": {
        "$type": "ObjectTypeExpr",
        "properties": [
          {
            "$type": "Property",
            "name": "name",
            "type": {
              "$type": "TypeRefExpr",
              "ref": {
                "$ref": "#/typeDeclarations@0/typeParameters@0"
              },
              "typeArguments": []
            }
          },
          {
            "$type": "Property",
            "name": "age",
            "type": {
              "$type": "TypeRefExpr",
              "ref": {
                "$ref": "#/typeDeclarations@0/typeParameters@1"
              },
              "typeArguments": []
            }
          }
        ]
      }
    }
  ],
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param",
          "type": {
            "$type": "TypeRefExpr",
            "ref": {
              "$ref": "#/typeDeclarations@0"
            },
            "typeArguments": [
              {
                "$type": "TextTypeExpr",
                "name": "text"
              },
              {
                "$type": "NumTypeExpr",
                "name": "num"
              }
            ]
          },
          "optional": false
        }
      ],
      "returnType": {
        "$type": "TypeRefExpr",
        "ref": {
          "$ref": "#/typeDeclarations@0"
        },
        "typeArguments": [
          {
            "$type": "BoolTypeExpr",
            "name": "bool"
          },
          {
            "$type": "DecimalTypeExpr",
            "name": "decimal"
          }
        ]
      }
    }
  ]
}"
`;

exports[`type system grammar > type alias > declare object type alias 1`] = `
"{
  "$type": "FormMLDeclaration",
  "typeDeclarations": [
    {
      "$type": "TypeAliasDeclaration",
      "name": "MyType",
      "type": {
        "$type": "ObjectTypeExpr",
        "properties": [
          {
            "$type": "Property",
            "name": "name",
            "type": {
              "$type": "TextTypeExpr",
              "name": "text"
            }
          },
          {
            "$type": "Property",
            "name": "age",
            "type": {
              "$type": "NumTypeExpr",
              "name": "num"
            }
          }
        ]
      },
      "typeParameters": []
    }
  ],
  "declarations": []
}"
`;

exports[`type system grammar > type alias > declare simple type alias 1`] = `
"{
  "$type": "FormMLDeclaration",
  "typeDeclarations": [
    {
      "$type": "TypeAliasDeclaration",
      "name": "MyType",
      "type": {
        "$type": "TextTypeExpr",
        "name": "text"
      },
      "typeParameters": []
    }
  ],
  "declarations": []
}"
`;

exports[`type system grammar > type alias > declare type alias with type parameters 1`] = `
"{
  "$type": "FormMLDeclaration",
  "typeDeclarations": [
    {
      "$type": "TypeAliasDeclaration",
      "name": "MyType",
      "typeParameters": [
        {
          "$type": "TypeParameterDeclaration",
          "name": "T"
        },
        {
          "$type": "TypeParameterDeclaration",
          "name": "U"
        }
      ],
      "type": {
        "$type": "ObjectTypeExpr",
        "properties": [
          {
            "$type": "Property",
            "name": "name",
            "type": {
              "$type": "TypeRefExpr",
              "ref": {
                "$ref": "#/typeDeclarations@0/typeParameters@0"
              },
              "typeArguments": []
            }
          },
          {
            "$type": "Property",
            "name": "age",
            "type": {
              "$type": "TypeRefExpr",
              "ref": {
                "$ref": "#/typeDeclarations@0/typeParameters@1"
              },
              "typeArguments": []
            }
          }
        ]
      }
    }
  ],
  "declarations": []
}"
`;

exports[`type system grammar > type alias > type alias can be used as a type 1`] = `
"{
  "$type": "FormMLDeclaration",
  "typeDeclarations": [
    {
      "$type": "TypeAliasDeclaration",
      "name": "MyType",
      "type": {
        "$type": "TextTypeExpr",
        "name": "text"
      },
      "typeParameters": []
    }
  ],
  "declarations": [
    {
      "$type": "FunctionDeclaration",
      "name": "myFunction",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param",
          "type": {
            "$type": "TypeRefExpr",
            "ref": {
              "$ref": "#/typeDeclarations@0"
            },
            "typeArguments": []
          },
          "optional": false
        }
      ],
      "returnType": {
        "$type": "TypeRefExpr",
        "ref": {
          "$ref": "#/typeDeclarations@0"
        },
        "typeArguments": []
      }
    }
  ]
}"
`;
